<resources>
    <string name="app_name">Penmedia TV</string>
    <string name="mine">Mine</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="tv_series" translatable="false">TV series</string>
    <string name="animation" translatable="false">Animation</string>
    <string name="documentary">Documentary</string>
    <string name="company">TV Company Introduction</string>
    <string name="software">Software Information</string>
    <string name="related_software">Related Software Information</string>
    <string name="version">Current Version</string>
    <string name="details">1991年，香港黑帮三合会会员刘健明听从老大韩琛的吩咐，加入警察部队成为黑帮卧底，韩琛许诺刘健明会帮其在七年后晋升为见习督察。1992年，警察训练…. 更多</string>
    <string name="exit_content">There\'s a lot of exciting content,don\'t quit in a hurry~</string>
    <string name="network_disconnect">Network is disconnected</string>
    <string name="retry">Reconnect</string>
    <string name="history_empty">The historical record is empty\nlet\'s go and watch some.</string>
    <string name="collection_null">The collection is empty,hurry\\nup and collect some.</string>
    <string name="go_watch">Go watch</string>
    <string name="my_collection">My Colllection</string>
</resources>