<!-- 菜单项 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mine"
            android:icon="@drawable/ic_mine_selector"
            android:title="@string/mine"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_selector"
            android:title="@string/search"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_selector"
            android:title="@string/history"/>
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_movies"
            android:title="@string/movies"/>
        <item
            android:id="@+id/nav_tv_series"
            android:title="@string/tv_series"/>
        <item
            android:id="@+id/nav_animation"
            android:title="@string/animation"/>
        <item
            android:id="@+id/nav_documentary"
            android:title="@string/documentary"/>
    </group>
</menu>
