<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/img_bg"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/img_logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="#b3c0e7"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="550dp"
        android:layout_height="60dp"
        android:layout_marginTop="27dp"
        app:cardCornerRadius="15dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#24272e" />

        <TextView
            android:id="@+id/company_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/company"
            android:textColor="#b3c0e7"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="550dp"
        android:layout_height="90dp"
        android:layout_marginTop="27dp"
        app:cardCornerRadius="15dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#24272e" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/software_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/software"
                android:textColor="#b3c0e7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/related_software"
                android:textColor="#b3c0e7"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="550dp"
        android:layout_height="90dp"
        android:layout_marginTop="27dp"
        app:cardCornerRadius="15dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#24272e" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="#b3c0e7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/related_software"
                android:textColor="#b3c0e7"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>