<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg">

    <ImageView
        android:id="@+id/iv_my_collection"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_my_collection"
        app:layout_constraintEnd_toStartOf="@id/tv_collection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/my_collection"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/iv_my_collection"
        app:layout_constraintTop_toTopOf="@id/iv_my_collection" />
    <!--收藏记录不为空-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_collection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="35dp"
        android:paddingTop="20dp"
        android:scrollbars="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_my_collection" />
    <!--收藏为空-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_my_collection">

        <ImageView
            android:id="@+id/iv_collection_null"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_history_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/collection_null"
            android:textColor="#b3c0e7"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_watch"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_btn_exit"
            android:text="@string/go_watch"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>