<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/img_bg"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/img_logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="#b3c0e7"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="450dp"
            android:layout_height="390dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:cardCornerRadius="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1a1a1a" />

            <androidx.cardview.widget.CardView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="27dp"
                android:layout_marginRight="18dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusDown="@string/software"
                app:cardCornerRadius="15dp">

                <View
                    android:id="@+id/view_company"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#24272e" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="User Use Agreement"
                    android:textColor="#b3c0e7"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/software"
                    android:textColor="#b3c0e7"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/related_software"
                    android:textColor="#b3c0e7"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="450dp"
            android:layout_height="390dp"
            android:layout_marginLeft="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:cardCornerRadius="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1a1a1a" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="27dp"
                android:layout_marginRight="18dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusDown="@string/software"
                app:cardCornerRadius="15dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#24272e" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="User Privacy Agreement"
                    android:textColor="#b3c0e7"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/software"
                    android:textColor="#b3c0e7"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/related_software"
                    android:textColor="#b3c0e7"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>